# Project-OSRM

./: .gitignore  CMakeLists.txt  appveyor-build.bat  datastore.cpp  extractor.cpp  prepare.cpp  routed.cpp  server.ini  test_windows.bat  typedefs.h
Algorithms/: ConcaveHull.cpp  ConcaveHull.h  DouglasPeucker.cpp  DouglasPeucker.h  ExtractRouteNames.h  IteratorBasedCRC32.h  ObjectToBase64.h
Contractor/: Contractor.h  EdgeBasedGraphFactory.cpp
DataStructures/: EdgeBasedNode.h  NNGrid.h  RouteParameters.cpp  SearchEngine.h  SharedMemoryFactory.h  StaticRTree.h  TimingUtil.h
Descriptors/: JSONDescriptor.h
Extractor/: ExtractionContainers.cpp  ExtractionContainers.h  ScriptingEnvironment.cpp  XMLParser.cpp
Include/osrm/: Coordinate.h  Reply.h  RouteParameters.h
Plugins/: AreaPlugin.h  HelloWorldPlugin.h
Server/: APIGrammar.h  BasicDatastructures.h  Connection.cpp  RequestHandler.cpp
Server/DataStructures/: InternalDataFacade.h
Tools/: components.cpp  windowstime.cpp
Util/: ComputeAngle.h  FingerPrint.cpp.in  GraphLoader.h  SimpleLogger.h  TimingUtil.h  TrigonometryTables.h  UUID.cpp.in  UUID.h
cmake/: FindLuabind.cmake
features/step_definitions/: options.rb
features/support/: data.rb  env.rb  launch.rb  route.rb
include/engine/: engine_config.hpp  search_engine.hpp
include/engine/plugins/: isochrone.hpp  isochrone_plugin.hpp
include/engine/routing_algorithms/: isochrone.hpp
include/util/: routed_options.hpp
nredko/: .stxxl.txt  index.html  osrm-routed.sln  osrm-routed.vcxproj  osrm-routed.vcxproj.filters
nredko/include/util/: fingerprint_impl.hpp  version.hpp
nredko/other_code/: AreaPlugin.h  ConcaveHull.cpp
osrm-routed/: osrm-routed.sln  osrm-routed.vcxproj  osrm-routed.vcxproj.filters
src/engine/: engine.cpp
src/tools/: routed.cpp
